5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1635_2703.log
== TEST (2019-04-10 13:41:36) 
-- CODE:
idade= input("idade :")

if (idade => 18) :
	print ("eleitor")

else (idade < 18) :
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    if (idade => 18) :
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:41:48) 
-- CODE:
idade= input("idade :")

if (idade == > 18) :
	print ("eleitor")

else (idade < 18) :
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    if (idade == > 18) :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:42:01) 
-- CODE:
idade= input("idade :")

if (idade >= 18) :
	print ("eleitor")

else (idade < 18) :
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 6
    else (idade < 18) :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:42:05) 
-- CODE:
idade= input("idade :")

if (idade >= 18) :
	print ("eleitor")

else (idade < 18) :
	print("nao_eleitor")
-- EXECUTION TIME:
0.134522
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 6
    else (idade < 18) :
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:24) 
-- CODE:
idade= int(input("idade :"))

if (idade >= 18) :
	print ("eleitor")

else :
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:43:54) 
-- CODE:
idade= int(input("idade :"))

if (idade >= 18) :
	print ("eleitor")

else :
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:44:03) 
-- CODE:
idade= int(input("idade :"))

if (idade >= 18) :
	print ("eleitor")

else :
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:44:24) 
-- CODE:
idade=int(input("idade :"))

if (idade >= 18) :
	print ("eleitor")

else :
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:44:30) 
-- CODE:
idade=int(input("idade :"))

if (idade >= 18) :
	print ("eleitor")

else :
	print("nao_eleitor")
-- EXECUTION TIME:
0.197905
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:46:55) 
-- CODE:
idade= int(input("idade :"))

if (idade >= 18) :
	print ("eleitor")

else :
	print("nao_eleitor")
-- EXECUTION TIME:
0.230393
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
